--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "roman-ojha",
+  "main": "electron/electron.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
