feat: successfully running & building electron app with vue+ts+vite

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "serve": "vite preview",
     "electron": "wait-on tcp:5173 && cross-env IS_DEV=true electron .",
     "electron:pack": "electron-builder --dir",
-    "electron:dev": "tsc && concurrently -k \"cross-env BROWSER=none yarn dev\" \"yarn electron\"",
+    "electron:dev": "tsc && concurrently \"cross-env BROWSER=none yarn dev\" \"yarn electron\" \"tsc -w\"",
     "electron:builder": "electron-builder",
     "build:for:electron": "vue-tsc --noEmit && cross-env ELECTRON=true vite build",
-    "app:build": "yarn build:for:electron && yarn electron:builder"
+    "app:build": "tsc && yarn build:for:electron && yarn electron:builder"
   },
   "dependencies": {
     "vue": "^3.2.37"
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.3",
     "electron": "^20.1.4",
     "electron-builder": "^23.3.3",
+    "electron-reloader": "^1.2.3",
     "tsc": "^2.0.4",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
